gamestar/static/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto&family=Saira+Stencil+One&display=swap');

body {
    display: flex;
    min-height: 100vh;
    flex-direction: column;
    background-color: #444;
    background-image: url(/static/images/carl-raw-m3hn2Kn5Bns-unsplash.jpg);
    background-attachment: fixed;
    background-position: top;
    background-blend-mode: overlay;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: 'Saira Stencil One', cursive;
}

.container {
    position: relative;
}

#page-logo {
    max-width: 100%;
    margin-top: 1rem;
}

#nav-logo {
    height: 45px;
    margin-top: 6px;
}

#flashes {
    position: absolute;
    top: 40px;
    right: 0;
    left: 0;
    font-size: 1.25rem;
    font-weight: bold;
}

.flash {
    position: relative;
    cursor: pointer;
}

.flash i {
    position: absolute;
    top: 5px;
    right: 5px;
    cursor: pointer;
    pointer-events: none;
    font-size: 1.5rem;
}

main {
    flex: 1 0 auto;
}

.card-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.card {
    max-width: 310px;
}

.card .card-content .rating {
    margin-top: 1rem;
    font-size: 1.5rem;
}

#register-dialog,
#login-dialog {
    margin-top: 4rem;
}

#register-form .row .input-field,
#login-form .row .input-field {
    padding-right: 2rem;
}

